# intrusion-detection

./: CONTRIBUTING.md  README.md  main.py  pyproject.toml
intrusion_detection/: __init__.py  ids.py
tests/: test_ids.py
