[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intrusion-detection"
version = "0.1.0"
description = "A network intrusion detection utility."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Aaron Rusz"}]
license = {text = "GPL-3.0-or-later"}
dependencies = ["scapy", "psutil"]
[project.optional-dependencies]
test = ["pytest"]
keywords = ["intrusion", "detection", "network", "security"]
